# PdfiumAndroid

./: build.gradle  build_old.gradle  readme.txt
PdfiumApp/: settings.gradle
PdfiumApp/app/: build.gradle
PdfiumApp/app/src/main/: AndroidManifest.xml
PdfiumApp/app/src/main/java/com/heaven7/android/pdfium/app/: FileUtils.java  MainActivity.java
PdfiumApp/app/src/main/res/values/: strings.xml
PdfiumApp/gradle/wrapper/: gradle-wrapper.properties
PdfiumApp/pdfiumandroid/: CMakeLists.txt  build.gradle
PdfiumApp/pdfiumandroid/src/main/: AndroidManifest.xml
PdfiumApp/pdfiumandroid/src/main/cpp/: java_env.cpp  java_env.h  mainJNILib.cpp
PdfiumApp/pdfiumandroid/src/main/java/com/heaven7/android/pdfium/: PDFWriter.java  PDFWriterImpl.java
PdfiumApp/pdfiumandroid/src/main/java/com/shockwave/pdfium/: PdfiumCore.java
src/main/java/com/shockwave/pdfium/: PdfiumCore.java
src/main/jni/src/: mainJNILib.cpp
